--- a/espanel.html
+++ b/espanel.html
@@ -6,8 +6,7 @@
     <title>Panel del estudiante | AquiVivo</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;family=Playfair+Display:wght@700;900&amp;display=swap"
-      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&amp;family=Playfair+Display:wght@700;900&amp;display=swap" rel="stylesheet"
     />
     <!-- ✅ consistente con login/admin -->
     <link href="assets/css/styles.css" rel="stylesheet" />
@@ -3268,5 +3267,32 @@
         </div>
       </div>
     </div>
-  </body>
+  
+<script data-aquivivo-no-new-tab="1">
+  // Force same-tab navigation (prevents accidental new tabs)
+  (function () {
+    try {
+      document.addEventListener('DOMContentLoaded', function () {
+        document.querySelectorAll('a[target="_blank"]').forEach(function (a) {
+          a.removeAttribute('target');
+          var rel = (a.getAttribute('rel') || '').split(/\s+/).filter(Boolean);
+          rel = rel.filter(function (x) { return !(/^noopener$/i.test(x) || /^noreferrer$/i.test(x)); });
+          if (rel.length) a.setAttribute('rel', rel.join(' '));
+          else a.removeAttribute('rel');
+        });
+      });
+
+      var _open = window.open;
+      window.open = function (url, target) {
+        if (target && String(target).toLowerCase() === '_blank' && url) {
+          window.location.assign(url);
+          return null;
+        }
+        return _open.apply(window, arguments);
+      };
+    } catch (e) {}
+  })();
+</script>
+
+</body>
 </html>
