--- a/login.html
+++ b/login.html
@@ -18,16 +18,18 @@
     .input:focus{ border-color: rgba(252,209,22,.85); box-shadow: 0 0 0 4px rgba(252,209,22,.18); }
     .actions{ display:flex; gap: 10px; flex-wrap: wrap; margin-top: 10px; }
     .msg{ margin-top: 12px; font-weight: 800; font-size: 13px; color: #0b1b3f; }
-    .msg.error{ color: #b91c1c; } .msg.ok{ color: #065f46; }
+    .msg.error{ color: #b91c1c; }
+    .msg.ok{ color: #065f46; }
     .hint{ margin-top: 12px; font-size: 12px; color: #6b7280; line-height: 1.35; }
     .quick-links{ margin-top: 14px; display:flex; gap: 10px; flex-wrap: wrap; }
     .reset-link{ margin-top: 10px; display:inline-flex; align-items:center; gap: 10px; border:none; background:transparent; color:#003893; font-weight:900; cursor:pointer; text-decoration: underline; padding: 0; }
     .reset-link:hover{ opacity:.9; }
+  
   </style>
 </head>
 <body>
   <div id="appHeader"></div>
-<main class="page">
+  <main class="page">
     <div class="container">
       <div class="auth-wrap">
         <div class="hero-card">
@@ -44,28 +46,39 @@
             <a class="btn-white-outline" href="Contacto.html">Contacto</a>
           </div>
         </div>
+
         <div class="form-card">
-          <div class="form-title">Inicia sesión / Regístrate</div>
-          <p class="form-sub">El registro crea una cuenta. Después de iniciar sesión, irás a tu panel de estudiante.</p>
+          <div class="form-title">Acceso</div>
+          <p class="form-sub">Elige el modo: <b>Iniciar sesión</b> o <b>Crear cuenta</b>. (En móvil, la tecla Enter usará el modo seleccionado.)</p>
+
+          <div style="display:flex; gap:10px; flex-wrap:wrap; margin: 10px 0 14px;">
+            <button class="btn-yellow" id="tabLogin" type="button" style="padding:10px 14px; border-radius:999px; font-weight:900;">🔐 Iniciar sesión</button>
+            <button class="btn-white-outline" id="tabRegister" type="button" style="padding:10px 14px; border-radius:999px; font-weight:900;">✨ Crear cuenta</button>
+          </div>
+
           <div class="field">
             <label for="name">Nombre (opcional)</label>
             <input class="input" type="text" id="name" placeholder="Nombre (solo en registro)">
           </div>
+
           <div class="field">
             <label for="email">Correo electrónico</label>
-            <input class="input" type="email" id="email" placeholder="Correo electrónico">
+            <input class="input" type="email" id="email" placeholder="Correo electrónico" autocomplete="email">
           </div>
+
           <div class="field">
             <label for="password">Contraseña</label>
             <div style="position:relative;">
-              <input class="input" type="password" id="password" placeholder="Contraseña" style="padding-right:48px;">
+              <input class="input" type="password" id="password" placeholder="Contraseña" autocomplete="current-password" style="padding-right:48px;">
               <button type="button" id="togglePassword" title="Mostrar / ocultar contraseña" style="position:absolute; right:12px; top:50%; transform:translateY(-50%); border:none; background:transparent; cursor:pointer; font-size:18px; opacity:.75;">👁️</button>
             </div>
           </div>
+
           <div class="actions">
             <button class="btn-yellow" id="loginBtn" type="button">Inicia sesión</button>
             <button class="btn-red" id="registerBtn" type="button">Regístrate</button>
           </div>
+
           <button class="reset-link" type="button" id="resetPasswordBtn">Olvidé mi contraseña</button>
           <div id="message" class="msg"></div>
           <div class="hint">Si algo no funciona en GitHub Pages: recarga <strong>Ctrl + Shift + R</strong>.</div>
@@ -73,14 +86,25 @@
       </div>
     </div>
   </main>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
     import {
       getAuth,
+      setPersistence,
+      browserLocalPersistence,
       createUserWithEmailAndPassword,
       signInWithEmailAndPassword,
-      sendPasswordResetEmail
+      sendPasswordResetEmail,
+      updateProfile
     } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-auth.js";
+    import {
+      getFirestore,
+      doc,
+      setDoc,
+      serverTimestamp
+    } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-firestore.js";
+
     const firebaseConfig = {
       apiKey: "AIzaSyBoa3Yf82CDW6k1FSwdeoQg-gBTjh9kVZM",
       authDomain: "aquivivo-platform.firebaseapp.com",
@@ -89,8 +113,18 @@
       messagingSenderId: "116115622011",
       appId: "1:116115622011:web:33a4a583eba4368071bade"
     };
+
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    // ✅ Mobile fix: ensure the session is stored locally (WebView/phones can be picky)
+    try { await setPersistence(auth, browserLocalPersistence); } catch {}
+
+    // ✅ Mobile/in-app browsers can lose session if persistence isn't set explicitly.
+    try { await setPersistence(auth, browserLocalPersistence); } catch {}
+
+    const nameInput = document.getElementById("name");
     const emailInput = document.getElementById("email");
     const passwordInput = document.getElementById("password");
     const registerBtn = document.getElementById("registerBtn");
@@ -98,8 +132,67 @@
     const messageEl = document.getElementById("message");
     const toggleBtn = document.getElementById("togglePassword");
     const resetBtn = document.getElementById("resetPasswordBtn");
-    function setMsg(text, type){ messageEl.textContent = text || ""; messageEl.className = "msg" + (type ? (" " + type) : ""); }
-    document.addEventListener("keydown", (e) => { if (e.key === "Enter") loginBtn.click(); });
+
+    const tabLogin = document.getElementById("tabLogin");
+    const tabRegister = document.getElementById("tabRegister");
+
+    let MODE = "login"; // login | register
+
+    function setMode(next){
+      MODE = next === "register" ? "register" : "login";
+
+      // show/hide name field
+      const nameField = nameInput?.closest?.('.field');
+      if(nameField) nameField.style.display = (MODE === "register") ? "grid" : "none";
+
+      // show only the relevant main button (avoid confusion on mobile)
+      if(loginBtn) loginBtn.style.display = (MODE === "login") ? "inline-flex" : "none";
+      if(registerBtn) registerBtn.style.display = (MODE === "register") ? "inline-flex" : "none";
+
+      // tabs visual
+      if(tabLogin) tabLogin.className = (MODE === "login") ? "btn-yellow" : "btn-white-outline";
+      if(tabRegister) tabRegister.className = (MODE === "register") ? "btn-yellow" : "btn-white-outline";
+
+      // better autofill behavior
+      if(passwordInput){
+        passwordInput.setAttribute("autocomplete", MODE === "register" ? "new-password" : "current-password");
+      }
+
+      setMsg("");
+    }
+
+    function setMsg(text, type) {
+      messageEl.textContent = text || "";
+      messageEl.className = "msg" + (type ? (" " + type) : "");
+    }
+
+    function normalizeAuthError(err) {
+      const code = String(err?.code || "");
+      if (code.includes("auth/email-already-in-use")) return "Este correo ya está registrado.";
+      if (code.includes("auth/invalid-email")) return "Correo inválido.";
+      if (code.includes("auth/weak-password")) return "Contraseña demasiado débil (mínimo 6 caracteres).";
+      if (code.includes("auth/invalid-credential") || code.includes("auth/wrong-password")) return "Correo o contraseña incorrectos.";
+      if (code.includes("auth/user-not-found")) return "No existe una cuenta con este correo.";
+      if (code.includes("auth/network-request-failed")) return "Problema de red (móvil/WebView). Prueba abrir en Chrome/Safari normal.";
+      if (code.includes("auth/operation-not-supported-in-this-environment")) return "Este navegador (p. ej. Instagram/TikTok) bloquea el registro. Abre la página en Chrome/Safari.";
+      if (code.includes("auth/too-many-requests")) return "Demasiados intentos. Intenta más tarde.";
+      return err?.message || "Error.";
+    }
+
+    // Enter submits the selected mode (important on mobile keyboards)
+    document.addEventListener("keydown", (e) => {
+      if (e.key !== "Enter") return;
+      if (MODE === "register") registerBtn?.click();
+      else loginBtn?.click();
+    });
+
+    // Tabs
+    tabLogin?.addEventListener("click", () => setMode("login"));
+    tabRegister?.addEventListener("click", () => setMode("register"));
+
+    // Init
+    setMode("login");
+
     if (toggleBtn) {
       toggleBtn.addEventListener("click", () => {
         const hidden = passwordInput.type === "password";
@@ -107,105 +200,74 @@
         toggleBtn.textContent = hidden ? "🙈" : "👁️";
       });
     }
+
     loginBtn.addEventListener("click", async () => {
       setMsg("");
+      const email = emailInput.value.trim();
+      const pass = passwordInput.value;
+      if (!email || !pass) {
+        setMsg("Ingresa correo y contraseña.", "error");
+        return;
+      }
+
       try {
-        await signInWithEmailAndPassword(auth, emailInput.value.trim(), passwordInput.value);
+        await signInWithEmailAndPassword(auth, email, pass);
         setMsg("¡Iniciada sesión! ✅", "ok");
         window.location.href = "espanel.html";
       } catch (error) {
-        setMsg("Error de inicio de sesión: " + error.message, "error");
+        setMsg("Error de inicio de sesión: " + normalizeAuthError(error), "error");
       }
     });
+
     registerBtn.addEventListener("click", async () => {
       setMsg("");
+      const name = (nameInput.value || "").trim();
+      const email = emailInput.value.trim();
+      const pass = passwordInput.value;
+
+      if (!email || !pass) {
+        setMsg("Ingresa correo y contraseña.", "error");
+        return;
+      }
+
       try {
-        await createUserWithEmailAndPassword(auth, emailInput.value.trim(), passwordInput.value);
+        const cred = await createUserWithEmailAndPassword(auth, email, pass);
+
+        // opcjonalnie: zapis nazwy w profilu
+        if (name) {
+          try { await updateProfile(cred.user, { displayName: name }); } catch {}
+        }
+
+        // opcjonalnie: utwórz dokument użytkownika (żeby panel miał dane startowe)
+        try {
+          await setDoc(doc(db, "users", cred.user.uid), {
+            email,
+            displayName: name || "",
+            createdAt: serverTimestamp(),
+            role: "student"
+          }, { merge: true });
+        } catch {}
+
         setMsg("¡Cuenta creada! 🎉", "ok");
         window.location.href = "espanel.html";
       } catch (error) {
-        setMsg("Error de registro: " + error.message, "error");
+        setMsg("Error de registro: " + normalizeAuthError(error), "error");
       }
     });
-    resetBtn.addEventListener("click", async () => {
-                        <stop offset="50%" style="stop-color:#003893;stop-opacity:1" />
-                        <stop offset="75%" style="stop-color:#003893;stop-opacity:1" />
-                        <stop offset="75%" style="stop-color:#CE1126;stop-opacity:1" />
-                        <stop offset="100%" style="stop-color:#CE1126;stop-opacity:1" />
-                      </lineargradient>
-                    </defs> <path d="M 40,85 L 45,80 L 52,75 L 60,72 L 70,70 L 82,68 L 95,67 L 110,67 L 125,68 L 140,69 L 155,71 L 170,74 L 185,78 L 198,83 L 210,89 L 220,96 L 228,104 L 234,113 L 238,123 L 240,133 L 241,145 L 240,158 L 238,172 L 234,186 L 230,200 L 225,214 L 218,228 L 210,241 L 200,253 L 188,263 L 174,271 L 158,277 L 140,281 L 120,283 L 100,283 L 80,280 L 62,275 L 46,268 L 32,259 L 22,248 L 15,236 L 10,223 L 7,210 L 5,197 L 5,184 L 6,171 L 8,158 L 11,145 L 15,132 L 20,120 L 26,108 L 33,97 Z" fill="url(#colombiaFlagFooter)" stroke="#FCD116" stroke-width="2.5" />
-                    </svg><span class="font-display text-xs font-black text-yellow-400">Aqui vivo</span>
-                  </div>
-                  
-              </div>
-            </div>
-          </footer>
-          <script type="module">
-            import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
-            import {
-              getAuth,
-              createUserWithEmailAndPassword,
-              signInWithEmailAndPassword,
-              sendPasswordResetEmail
-            } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-auth.js";
-            const firebaseConfig = {
-              apiKey: "AIzaSyBoa3Yf82CDW6k1FSwdeoQg-gBTjh9kVZM",
-              authDomain: "aquivivo-platform.firebaseapp.com",
-              projectId: "aquivivo-platform",
-              storageBucket: "aquivivo-platform.firebasestorage.app",
-              messagingSenderId: "116115622011",
-              appId: "1:116115622011:web:33a4a583eba4368071bade"
-            };
-            const app = initializeApp(firebaseConfig);
-            const auth = getAuth(app);
-            const emailInput = document.getElementById("email");
-            const passwordInput = document.getElementById("password");
-            const registerBtn = document.getElementById("registerBtn");
-            const loginBtn = document.getElementById("loginBtn");
-            const messageEl = document.getElementById("message");
-            const toggleBtn = document.getElementById("togglePassword");
-            const resetBtn = document.getElementById("resetPasswordBtn");
-            function setMsg(text, type){ messageEl.textContent = text || ""; messageEl.className = "msg" + (type ? (" " + type) : ""); }
-            document.addEventListener("keydown", (e) => { if (e.key === "Enter") loginBtn.click(); });
-            if (toggleBtn) {
-              toggleBtn.addEventListener("click", () => {
-                const hidden = passwordInput.type === "password";
-                passwordInput.type = hidden ? "text" : "password";
-                toggleBtn.textContent = hidden ? "🙈" : "👁️";
-              });
-            }
-            loginBtn.addEventListener("click", async () => {
-              setMsg("");
-              try {
-                await signInWithEmailAndPassword(auth, emailInput.value.trim(), passwordInput.value);
-                setMsg("¡Iniciada sesión! ✅", "ok");
-                window.location.href = "espanel.html";
-              } catch (error) {
-                setMsg("Error de inicio de sesión: " + error.message, "error");
-              }
-            });
-            registerBtn.addEventListener("click", async () => {
-              setMsg("");
-              try {
-                await createUserWithEmailAndPassword(auth, emailInput.value.trim(), passwordInput.value);
-                setMsg("¡Cuenta creada! 🎉", "ok");
-                window.location.href = "espanel.html";
-              } catch (error) {
-                setMsg("Error de registro: " + error.message, "error");
-              }
-            });
-            resetBtn.addEventListener("click", async () => {
-              const email = emailInput.value.trim();
-              if (!email) {
-                setMsg("Ingresa tu correo para restablecer tu contraseña.", "error");
-                return;
-              }
-              try {
-                await sendPasswordResetEmail(auth, email);
-                setMsg("📩 Se envió un correo para restablecer tu contraseña.", "ok");
-              } catch (error) {
-                setMsg("Error al restablecer contraseña: " + error.message, "error");
-              }
-            });
-          </script>
 
+    resetBtn.addEventListener("click", async () => {
+      const email = emailInput.value.trim();
+      if (!email) {
+        setMsg("Ingresa tu correo para restablecer tu contraseña.", "error");
+        return;
+      }
+      try {
+        await sendPasswordResetEmail(auth, email);
+        setMsg("📩 Se envió un correo para restablecer tu contraseña.", "ok");
+      } catch (error) {
+        setMsg("Error al restablecer contraseña: " + normalizeAuthError(error), "error");
+      }
+    });
+  </script>
+</body>
+</html>
